# Makefile.am -- Process this file with automake to produce Makefile.in
#
AUTOMAKE_OPTIONS = subdir-objects

bin_PROGRAMS = gbafix gbalzss gbfs insgbfs lsgbfs ungbfs

gbafix_SOURCES	=	src/gbafix.c
gbalzss_SOURCES	=	src/gbalzss.cpp
gbfs_SOURCES	=	src/gbfs.c src/gbfs.h
insgbfs_SOURCES	=	src/insgbfs.c
lsgbfs_SOURCES	=	src/lsgbfs.c src/gbfs.h
ungbfs_SOURCES	=	src/ungbfs.c src/gbfs.h

EXTRA_DIST = autogen.sh README.md
