#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.61)
AC_INIT([gbatools],[1.0.0],[davem@devkitpro.org])
AC_CONFIG_SRCDIR([src/gbafix.c])

AM_INIT_AUTOMAKE([1.10])

AC_CANONICAL_BUILD
AC_CANONICAL_HOST

AC_PROG_CC

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
