#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([gba-tools],[1.2.0],[https://github.com/devkitpro/gba-tools/issues])
AC_CONFIG_MACRO_DIR([m4])
AC_CONFIG_SRCDIR([src/gbafix.c])

AM_INIT_AUTOMAKE([foreign])

AC_CANONICAL_BUILD
AC_CANONICAL_HOST

AC_PROG_CC
AC_PROG_CXX

AX_CXX_COMPILE_STDCXX_11(noext, mandatory)

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
